# sdl_ttf_playground

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CMake/: FetchFreetype.cmake  FetchHarfbuzz.cmake  FetchHarfbuzzFreetype.cmake  FetchLibPng.cmake  FetchSDL2.cmake  FetchSDL_ttf.cmake  FetchZlib.cmake  UpdateFonts.cmake
